--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -57,6 +57,7 @@
             android:layout_marginStart="43dp"
             android:layout_marginTop="1dp"
             android:layout_marginEnd="320dp"
+            android:checked="true"
             android:text="@string/_3" />
 
         <RadioButton
